show progress bar while image is loading, show user badge count in textview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">StackoverflowUsers</string>
-
+    <string name="username_and_badges">%1s\n%2s</string>
 </resources>
